Gap full container fix, character  validator extension, main image adjustment

--- a/src/app/modules/auth/authentication.component.scss
+++ b/src/app/modules/auth/authentication.component.scss
@@ -1,5 +1,4 @@
 :host {
-  display: block;
   h2 {
     color: #000;
   }
@@ -9,11 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
   /* Ruta relativa (sube 3 niveles) para que Angular resuelva y copie el asset, compatible con baseHref en /bipal-front/ */
   background-image: url('../../../assets/img/background-auth.jpg');
-  height: 100vh;
-  width: 100vw;
-  background-size:contain;
+  background-size:inherit;
 }
 span{
   padding: 1rem ;
@@ -25,5 +23,11 @@ span{
   padding: 5vh 20vw 0 20vw ;
   text-align: center;
   color:#5b5d61;
+  @media (max-width:840px) {
+    font-size: 1.8rem;
+  }
+  @media (max-width:600px) {
+    font-size: 1.4rem;
+  }
 }
 
