--- a/src/app/modules/auth/components/full-container-auth/full-container-auth.component.scss
+++ b/src/app/modules/auth/components/full-container-auth/full-container-auth.component.scss
@@ -1,11 +1,14 @@
 :host {
     display: flex;
     justify-content: center;
+    width: 100%;
+    max-width: 100vw;
 }
 // -------------------------------- full container--------------------------------------------------------------------------------------------
 .title-container{
   display: flex;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
 }
 .full-container {
   display: flex;
@@ -14,28 +17,29 @@
   flex-direction: row;
   padding-top: 2rem;
   justify-content: center;
-  gap: 2rem;
 
   @media (max-width: 768px) {
     flex-direction: column;
     width: 95%;
     padding-top: 1rem;
-    gap: 1rem;
   }
 }
 
 // ----------------------------left container-------------------------------------
 .left-container {
-  width: 40%;
+  width: 50%;
   background-color: #2D5F00;
   color: white;
   padding: 0;
   border-radius: 1.7rem 0 0 1.7rem;
+  display: flex;
+  flex-direction: column;
   
   @media (max-width: 768px) {
     width: 100%;
     border-radius: 1.7rem 1.7rem 0 0;
-    margin: 0;
+    margin: 0rem;
+    padding: 0rem;
   }
 }
 
@@ -59,11 +63,13 @@
   }
 
   @media (max-width: 768px) {
-    padding: 1rem;
+    padding: 0rem;
+    margin: 2rem;
     font-size: 0.9rem;
     
     h3 {
       font-size: 1.2rem;
+      padding: 1rem;
     }
   }
 }
@@ -82,11 +88,14 @@
     width: 100%;
     padding: 1rem;
     border-radius: 0 0 1.7rem 1.7rem;
-    margin: 0;
+    margin: 0rem -1rem;
   }
 }
 .mat-expansion-panel-header-description{
   flex-basis: min-content;
+}
+.panel-description{
+  font-size: 0.9rem;
 }
   
 // ---------------------------------------------/container-------------------------------------------------------------------------------
