--- a/src/app/modules/auth/components/registrarse/registrarse.component.scss
+++ b/src/app/modules/auth/components/registrarse/registrarse.component.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .register-form{
   display: flex;
