--- a/src/app/modules/auth/components/reset-password/reset-pasword-component.component.scss
+++ b/src/app/modules/auth/components/reset-password/reset-pasword-component.component.scss
@@ -5,6 +5,12 @@
   margin: 2rem;
   padding: 0;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
+  
+  @media (max-width: 768px) {
+    margin: 1rem;
+  }
 }
 
 .container-reset {
